tests/snapshots/transform__worklet_in_call_argument.snap
---
source: tests/transform.rs
expression: output
---
function runOnUISync(worklet) {}
function createSerializable(fn) {}
const _worklet_14209625217054_init_data = {
	code: "(function null1(){return 42;})",
	location: "/dev/null",
	sourceMap: "{\"version\":3,\"sources\":[\"/dev/null\"],\"names\":[],\"mappings\":\"AAAA,CAAC,SAAS,QAAQ,OAAO,GAAE,CAAC\"}"
};
const result = runOnUISync(createSerializable(function null1Factory({ _worklet_14209625217054_init_data }) {
	const _e = [
		new global.Error(),
		1,
		-27
	];
	const null1 = function() {
		return 42;
	};
	null1.__closure = {};
	null1.__workletHash = 0xcec6fa9d81e;
	null1.__pluginVersion = "x.y.z";
	null1.__initData = _worklet_14209625217054_init_data;
	null1.__stackDetails = _e;
	return null1;
}({ _worklet_14209625217054_init_data })));
