tests/snapshots/transform__worklet_in_class_lowered_iife.snap
---
source: tests/transform.rs
expression: output
---
const _worklet_5145138647477_init_data = {
	code: "(function initializeUI_null1(){var registerReanimatedError=this.__closure.registerReanimatedError;registerReanimatedError();})",
	location: "/dev/null",
	sourceMap: "{\"version\":3,\"sources\":[\"/dev/null\"],\"names\":[],\"mappings\":\"AAAA,CAAC,SAAS,qBAAqB,IAAK,AAAC,wBAAyB,IAAI,CAAC,SAAS,CAAvC,wBAAwC,0BAAyB,CAAC\"}"
};
var NativeReanimatedModule = /* @__PURE__ */ function() {
	function NativeReanimatedModule() {
		this.workletsModule = WorkletsModule;
		if (__DEV__) {
			assertSingleReanimatedInstance();
		}
		runOnUISync(function initializeUI_null1Factory({ _worklet_5145138647477_init_data, registerReanimatedError }) {
			const _e = [
				new global.Error(),
				-2,
				-27
			];
			const initializeUI = function() {
				registerReanimatedError();
			};
			initializeUI.__closure = { registerReanimatedError };
			initializeUI.__workletHash = 5145138647477;
			initializeUI.__pluginVersion = "x.y.z";
			initializeUI.__initData = _worklet_5145138647477_init_data;
			initializeUI.__stackDetails = _e;
			return initializeUI;
		}({
			_worklet_5145138647477_init_data,
			registerReanimatedError
		}));
	}
	return NativeReanimatedModule;
}();
