tests/snapshots/transform__worklet_in_top_level_if.snap
---
source: tests/transform.rs
expression: output
---
const _worklet_1645857113606_init_data = {
	code: "(function null1(){global._tagToJSPropNamesMapping={};})",
	location: "/dev/null",
	sourceMap: "{\"version\":3,\"names\":[],\"sources\":[\"/dev/null\"],\"sourcesContent\":[\"(function null1(){global._tagToJSPropNamesMapping={}});\"],\"mappings\":\"CAAC,SAAS,OAAO,CAAC,OAAO,yBAAyB,EAAE\"}"
};
if (!SHOULD_BE_USE_WEB) {
	runOnUISync(function null1Factory({ _worklet_1645857113606_init_data }) {
		const _e = [
			new global.Error(),
			1,
			-27
		];
		const null1 = function() {
			global._tagToJSPropNamesMapping = {};
		};
		null1.__closure = {};
		null1.__workletHash = 1645857113606;
		null1.__pluginVersion = "x.y.z";
		null1.__initData = _worklet_1645857113606_init_data;
		null1.__stackDetails = _e;
		return null1;
	}({ _worklet_1645857113606_init_data }));
}
