tests/snapshots/transform__worklet_inside_switch.snap
---
source: tests/transform.rs
expression: output
---
const _worklet_16463388434953_init_data = {
	code: "(function null1(){return 1;})",
	location: "/dev/null",
	sourceMap: "{\"version\":3,\"sources\":[\"/dev/null\"],\"names\":[],\"mappings\":\"AAAA,CAAC,SAAS,QAAQ,OAAO,EAAC,CAAC\"}"
};
function handle(type) {
	switch (type) {
		case "a":
			const w = function null1Factory({ _worklet_16463388434953_init_data }) {
				const _e = [
					new global.Error(),
					1,
					-27
				];
				const null1 = function() {
					return 1;
				};
				null1.__closure = {};
				null1.__workletHash = 0xef92e6b6209;
				null1.__pluginVersion = "x.y.z";
				null1.__initData = _worklet_16463388434953_init_data;
				null1.__stackDetails = _e;
				return null1;
			}({ _worklet_16463388434953_init_data });
			break;
	}
}
